# overheadCablesAndBirdlife

./: .dccache  .env.sample  .flake8  .gitattributes  .gitignore  README.md  README.rst  docker-compose.debug.yml  docker-compose.production.yml  docker-compose.yml  package-lock.json_tbd  vetur.config.js
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/cables/: admin.py  apps.py  filters.py  models.py  serializers.py  test.py  urls.py  views.py
backend/cables/fixtures/: cables.xml
backend/cables/migrations/: 0001_initial.py  0002_alter_diagnosis_attraction_advice_and_more.py  0002_initial.py  0002_polemodel_neutralized_segmentmodel_neutralized_and_more.py  0002_rename_sensitivity_area_pole_sensitive_area_and_more.py  0003_action_history.py  0003_alter_action_infrastructure.py  0003_alter_action_options.py  0003_alter_diagnosis_condition_and_more.py  0003_alter_diagnosis_pole_attractivity_and_more.py  0003_alter_equipment_equipment_date.py  0003_observation_equipment_and_more.py  0003_polemodel_created_by_segmentmodel_created_by_and_more.py  0003_remove_equipment_cables_equipment_only_type_of_infrastructure_equipment_constraint_and_more.py  0003_remove_visit_visit_visit_remark.py  0004_alter_diagnosis_attraction_advice_and_more.py  0004_alter_diagnosis_pole_type.py  0004_alter_equipment_equipment_date.py  0004_alter_equipment_equipment_date_and_more.py  0004_alter_infrastructure_options.py  0004_alter_visit_pole_type.py  0004_polemodel_updated_by_segmentmodel_updated_by_and_more.py  0004_remove_equipment_equipment_date.py  (+39 more)
backend/commons/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/custom_content/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/fixtures/: cables.xml  geo_area.xml  geoareas.xml  mortality.xml  nomenclatures.xml  test_nomenclatures.xml
backend/geo_area/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/map_layers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/media/: apps.py  models.py  serializers.py  test.py  urls.py  views.py
backend/mortality/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/new_module/: apps.py  models.py  urls.py
backend/sensitive_area/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/species/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tests/: tests_commons.py
backend/trackable_basemodel/: apps.py  models.py
backend/users/: admin.py  models.py  serializers.py
(+223 files in other folders)
